# mahjong-encoding

./: .rustfmt.toml  Cargo.toml  lookup.rs
.github/workflows/: run-clippy.yaml  run-tests.yaml
examples/: ennumerate.rs
src/: lib.rs  lookup.rs  main.rs  tiles.rs
